Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-65081

BlitFramebuffer does not provide automatic parenting unlike other framegraph nodes

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • 5.10.1
    • 5.10, 5.11
    • Qt3D
    • None
    • 7aab0e3b850cc17735ac19ab7a6e7db2bac1cb83

    Description

      QBlitFramebuffer's setSource and setDestination does not automatically set a parent for the provided QRenderTargets when there is no parent yet. This is unlike other framegraph nodes. Compare with QRenderTargetSelector::setTarget for instance.

      This becomes particularly relevant in the use cases shown in QTBUG-65080, where there are QRenderTargets that are used only in combination with QBlitFramebuffer and are never associated with a QRenderTargetSelector.

      Attachments

        Issue Links

          No reviews matched the request. Check your Options in the drop-down menu of this sections header.

          Activity

            People

              lagocs Laszlo Agocs
              lagocs Laszlo Agocs
              Votes:
              0 Vote for this issue
              Watchers:
              1 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews

                  There are no open Gerrit changes