Add QBlitFramebuffer auto-parenting behavior

As is common with other nodes.

Task-number: QTBUG-65081
Change-Id: I12ccd2fb5344e116f2f5333b73edb4562799543d
Reviewed-by: Sean Harmer <sean.harmer@kdab.com>